# BlogDemoRepository

./: README.md
AutoAppIconSamples/: ReadMe.md
AutoAppIconSamples/apk/: app-debug.apk
AutoAppIconSamples/app/: build.gradle
AutoAppIconSamples/app/src/main/: AndroidManifest.xml
AutoAppIconSamples/app/src/main/java/org/autoappicon/: MainActivity.java
AutoAppIconSamples/app/src/main/res/layout/: activity_main.xml
AutoAppIconSamples/app/src/main/res/values/: strings.xml
AutoAppIconSamples/gradle/wrapper/: gradle-wrapper.properties
DownLoadManagerDemo/app/: build.gradle
DownLoadManagerDemo/app/src/main/: AndroidManifest.xml
DownLoadManagerDemo/app/src/main/res/layout/: activity_main.xml
DownLoadManagerDemo/app/src/main/res/values/: strings.xml
DownLoadManagerDemo/gradle/wrapper/: gradle-wrapper.properties
FFmpeg/app/: CMakeLists.txt  build.gradle
FFmpeg/app/src/androidTest/java/org/ndk/ffmpeg/: ExampleInstrumentedTest.java
FFmpeg/app/src/main/: AndroidManifest.xml
FFmpeg/app/src/main/cpp/: native-lib.cpp
FFmpeg/app/src/main/java/org/ndk/ffmpeg/: MainActivity.java
FFmpeg/app/src/main/res/layout/: activity_main.xml
FFmpeg/app/src/main/res/values/: strings.xml
FFmpeg/app/src/test/java/org/ndk/ffmpeg/: ExampleUnitTest.java
FFmpeg/gradle/wrapper/: gradle-wrapper.properties
FileProviderSample/: readme.md
FileProviderSample/DemoApk/: demo.apk
FileProviderSample/app/: build.gradle
FileProviderSample/app/src/main/: AndroidManifest.xml
FileProviderSample/app/src/main/res/layout/: activity_main.xml
FileProviderSample/app/src/main/res/values/: strings.xml
FileProviderSample/app/src/main/res/xml/: filepaths.xml
FileProviderSample/gradle/wrapper/: gradle-wrapper.properties
NDKFirst/app/: CMakeLists.txt  build.gradle
NDKFirst/app/src/androidTest/java/org/ndk/ndkfirst/: ExampleInstrumentedTest.java
NDKFirst/app/src/main/: AndroidManifest.xml
NDKFirst/app/src/main/cpp/: ndk_test.cpp  uninstall_tool.cpp
NDKFirst/app/src/main/java/org/ndk/ndkfirst/: MainActivity.java  NDKTest.java  Student.java  UninstallTool.java
NDKFirst/app/src/main/res/layout/: activity_main.xml
NDKFirst/app/src/main/res/values/: strings.xml
NDKFirst/app/src/test/java/org/ndk/ndkfirst/: ExampleUnitTest.java
NDKFirst/gradle/wrapper/: gradle-wrapper.properties
RecycleViewDragSamples/: README.md
RecycleViewDragSamples/app/: build.gradle
RecycleViewDragSamples/app/src/main/: AndroidManifest.xml
RecycleViewDragSamples/app/src/main/res/layout/: activity_main.xml  item_recycle.xml
RecycleViewDragSamples/app/src/main/res/values/: strings.xml
RecycleViewDragSamples/gradle/wrapper/: gradle-wrapper.properties
TestCameraRecorder/: .project  AndroidManifest.xml
TestCameraRecorder/res/layout/: activity_main.xml
TestCameraRecorder/res/values/: strings.xml
TestCameraRecorder/src/com/testcamerarecorder/: CameraSurfaceView.java  MainActivity.java
TestCameraSuper/: .project  AndroidManifest.xml
TestCameraSuper/res/layout/: activity_main.xml
TestCameraSuper/res/values/: strings.xml
TestCameraSuper/src/com/testcamerasuper/: BitmapUtil.java  CameraSurfaceView.java  CustomSurfaceView.java  MainActivity.java
TestSurfaceView/: .project
TestSurfaceView/res/layout/: activity_main.xml
TestSurfaceView/res/values/: strings.xml
TestSurfaceView/src/com/testsurfaceview/: CustomSurfaceView.java  MainActivity.java
TestSurfaceViewCamera/: .project  AndroidManifest.xml
TestSurfaceViewCamera/res/layout/: activity_main.xml
TestSurfaceViewCamera/res/values/: strings.xml
TestSurfaceViewCamera/src/com/testsurfaceviewcamera/: CameraSurfaceView.java  MainActivity.java
VectorDemo/: README.md
VectorDemo/app/: build.gradle
VectorDemo/app/src/main/: AndroidManifest.xml
VectorDemo/app/src/main/res/animator/: anim_searchbar_in.xml  anim_searchbar_out.xml  anim_searchbar_out2.xml
VectorDemo/app/src/main/res/drawable/: ic_android_black_24dp.xml  searchbar.xml  searchbar_anim.xml
VectorDemo/app/src/main/res/layout/: activity_main.xml
VectorDemo/app/src/main/res/values/: strings.xml
VectorDemo/gradle/wrapper/: gradle-wrapper.properties
ViewDragHelperDemo/: .classpath  .project  AndroidManifest.xml  ViewDragHelperDemo.apk
ViewDragHelperDemo/res/layout/: activity_drag_demo.xml  activity_main.xml  activity_sliding.xml
ViewDragHelperDemo/res/values/: strings.xml
ViewDragHelperDemo/src/org/demo/viewdraghelper/: DragDemoActivity.java  MainActivity.java  SlidingActivity.java
ViewDragHelperDemo/src/org/demo/viewdraghelper/widget/: SlidingMenu.java  ViewDragHelperDemo.java
XTuone/app/: app-release.apk  build.gradle
XTuone/app/src/main/: AndroidManifest.xml
XTuone/app/src/main/res/layout/: activity_main.xml  activity_view_pager1.xml  activity_view_pager2.xml  activity_view_pager3.xml
XTuone/app/src/main/res/values/: strings.xml
XTuone/gradle/wrapper/: gradle-wrapper.properties
eventinjector/app/: .gitignore  CMakeLists.txt  app-release.apk  build.gradle
eventinjector/app/src/androidTest/java/org/ndk/eventinjector/: ExampleInstrumentedTest.java
eventinjector/app/src/main/: AndroidManifest.xml
eventinjector/app/src/main/cpp/: EventInjector.c  EventInjector.h  KeyTouchInjector.c  KeyTouchInjector.h  KeyTouchInjector2.c
eventinjector/app/src/main/java/org/ndk/eventinjector/: Events.java  InjectorEventXActivity.java  InjectorInputActivity.java  InjectorUInputActivity.java  MainActivity.java  Shell.java  ShellUtils.java
eventinjector/app/src/main/java/org/ndk/eventinjector/utils/: KeyTouchInjector.java  KeyTouchInjector2.java  ShellUtils.java
eventinjector/app/src/main/res/layout/: activity_injector_input.xml  activity_injector_uinput.xml  activity_injectoreventxactivity.xml  activity_main.xml
eventinjector/app/src/main/res/values/: strings.xml
eventinjector/app/src/test/java/org/ndk/eventinjector/: ExampleUnitTest.java
eventinjector/gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
